Hopefully fixed formatting on safari 16

--- a/styles/index.css
+++ b/styles/index.css
@@ -14,15 +14,18 @@
     font-family: Alike;
     background-color: var(--primary);
     color: var(--secondary);
-    font-size: calc(0.5vw + 8px);
+    font-size: min(max(calc(0.5vw + 8px), 10px), 18px);
 }
 button {
     font-family: Alike;
     color: var(--secondary);
 }
+html, body {
+    overflow-x: hidden;
+}
 body {
     margin: 0;
-    width: 100vw;
+    width: 100%;
     height: 100dvh;
     overflow: hidden;
 
@@ -39,9 +42,10 @@ body {
     #loading-background {
         background-color: var(--primary);
     }
-    iframe, img {
+    img {
         position: absolute;
         width: 100%;
+        max-width: 100vw;
         height: 100%;
         top: 0;
         left: 0;
